Upgradge java version to 22